--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
 	},
 	"devDependencies": {
 		"@types/mocha": "^2.2.48",
-		"@types/node": "^7.0.67",
+		"@types/node": "^12.7.8",
 		"typescript": "^3.6.2",
 		"vscode": "^1.1.33"
 	},
@@ -95,5 +95,10 @@
 		"id": "70493c77-185f-40ad-8132-a3300a446ec2",
 		"publisherDisplayName": "Marc Tiehuis",
 		"publisherId": "29a44536-a9b2-4b9f-818d-bd2e850f091b"
+	},
+	"dependencies": {
+		"@types/chalk": "^2.2.0",
+		"@types/which": "^1.3.1",
+		"which": "^1.3.1"
 	}
 }
